--- a/Demo.tex
+++ b/Demo.tex
@@ -11,8 +11,8 @@
 %\setmonofont{Courier Std}
 %------------------------------------------------------------------------------
 % Chinese fonts: Mac
-\setCJKmainfont[BoldFont={PingFangSC-Medium}]{PingFangSC-Light} % mac PingFangSC-Light
-\setCJKsansfont[BoldFont={PingFangSC-Medium}]{PingFangSC-Light} % mac
+\setCJKmainfont[BoldFont={Noto Sans CJK SC Bold}]{Noto Sans CJK SC} % mac PingFangSC-Light
+\setCJKsansfont[BoldFont={Noto Sans CJK SC Bold}]{Noto Sans CJK SC} % mac
 
 % Chinese fonts: Windows
 % \setCJKmainfont{Microsoft YaHei Light} % windows
